Reference custom rules on main schema linting page

--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -71,6 +71,10 @@ Click a rule's severity to set it to any of the following:
 - **Warn.** Violations of this rule are flagged in checks reports, but they _don't_ cause the associated linter check to fail.
 - **Ignore.** Violations of this rule are ignored entirely.
 
+### Creating custom rules
+
+You can create custom prefix and suffix rules beyond the default ones provided. Refer to the linter rules page for a reference list of all default rules and [custom rule configuration instructions](./linter-rules#custom-rules).
+
 ## Running the linter
 
 Schema linting runs automatically as part of your graph's [schema checks](#linting-via-schema-checks). You can also perform [one-off linting](#one-off-linting) of local schema changes via the Rover CLI.
