Replace Link with ButtonLink component

--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -3,8 +3,6 @@ title: Introduction to Apollo GraphOS
 description: The GraphQL developer platform
 ---
 
-import {Link} from 'gatsby';
-
 **Apollo GraphOS** is the platform for building, managing, and scaling a **supergraph**: a network of your microservices and their data sources—all composed into a unified GraphQL API.
 
 ```mermaid
@@ -29,19 +27,18 @@ flowchart LR;
 ```
 
 <p>
-  <Button
+  <ButtonLink
     colorScheme="indigo"
-    to="/graphos/quickstart/cloud/"
-    as={Link}
+    href="/graphos/quickstart/cloud/"
     style={{
       marginRight: '10px'
     }}
   >
     Create your first supergraph!
-  </Button>
-  <Button colorScheme="gray" to="/intro/platform/" as={Link}>
+  </ButtonLink>
+  <ButtonLink colorScheme="gray" href="/intro/platform/">
     What's a supergraph?
-  </Button>
+  </ButtonLink>
 </p>
 
 ## What's in GraphOS?
@@ -93,13 +90,12 @@ An Enterprise plan also provides access to our Graph Champions community and a d
 
 **Ready to create your first supergraph?**
 
-<Button
+<ButtonLink
   colorScheme="indigo"
-  to="/graphos/quickstart/cloud/"
-  as={Link}
+  href="/graphos/quickstart/cloud/"
   style={{
     marginRight: '10px'
   }}
 >
   Get started with GraphOS!
-</Button>
+</ButtonLink>
